Ch.3 p.071 table 3-5 tr, th 1 onward

--- a/3.1_Understanding_Data_Models.html
+++ b/3.1_Understanding_Data_Models.html
@@ -180,6 +180,10 @@
 </p>
 <table>
     <caption>데이터 모델링의 3단계</caption>
+    <tr>
+        <th>단계명</th>
+        <th>설명</th>
+    </tr>
 </table>
 </body>
 </html>
