--- a/3.1_Understanding_Data_Models.html
+++ b/3.1_Understanding_Data_Models.html
@@ -184,6 +184,9 @@
         <th>단계명</th>
         <th>설명</th>
     </tr>
+    <tr>
+        <th>개념적 데이터 모델링</th>
+    </tr>
 </table>
 </body>
 </html>
