--- a/3.1_Understanding_Data_Models.html
+++ b/3.1_Understanding_Data_Models.html
@@ -186,6 +186,38 @@
     </tr>
     <tr>
         <th>개념적 데이터 모델링</th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    IT 시스템에서 구현하고자 하는 대상에 대해 포괄적 수준의 데이터 모델링을 진행한다.
+                </li>
+                <li>
+                    전사적 데이터 모델링 시 많이 사용하는 단계이다.
+                </li>
+            </ul>
+        </th>
+    </tr>
+    <tr>
+        <th>논리적 데이터 모델링</th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    IT 시스템에서 구현하고자 하는 비즈니스를 만족하기 위한 기본키, 속성, 관계, 외래키 등을
+                    <br/>정확하게 표현하는 단계이다.
+                </li>
+            </ul>
+        </th>
+    </tr>
+    <tr>
+        <th>물리적 데이터 모델링</th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    논리 데이터 모델을 기반으로 실제 물리 DB 구축을 위해 성능, 저장공간 등의 물리적인 특성을
+                    <br/>고려하여 설계하는 단계이다.
+                </li>
+            </ul>
+        </th>
     </tr>
 </table>
 </body>
