--- a/3.1_Understanding_Data_Models.html
+++ b/3.1_Understanding_Data_Models.html
@@ -264,5 +264,31 @@
         <th>-</th>
     </tr>
 </table>
+<h1>3.1.7 데이터 독립성의 필요성</h1>
+<p>
+    데이터의 독림석은 하위 단계의 데이터 구조가 변경되더라도 상위 단계에는 영향을 미치지 않는 속성을 말함.
+    즉, 데이터 구조가 변경되더라도 응용 프로그램 단에는 아무런 영향을 미치지 않도록 하는 것.
+    <br/><br/>
+    데이터 독립성이 출현하게 된 배경은 다음과 같음.
+    <br/>
+</p>
+<strong class="green-color">데이터 독립성이 출현하게 된 배경</strong>
+<ul>
+    <li>
+        보유한 데이터의 복잡도를 낮추고 중복된 데이터를 줄여서 시간의 흐름에 따라 증가하는 IT 시스템의 유지보수 비용을 젉감하는 데 그 목적이 있음.
+    </li>
+    <li>
+        사용자의 요구사항은 지속적으로 신규/수정/삭제가 발생하고 있으며, 그에 따른 화면과 물리 DB 간 서로 독립성을 유지하기 위해 데이터 독립성이라는
+        개념이 출현함.
+    </li>
+    </ul>
+<p>
+    IT 시스템 유지보수 비용의 절감과 사용자 화면, 물리 DB 간 서로의 독립성을 유지하기 위해 데이터 독립성이 필요(출현)하게 되었음. 데이터 독립성을
+    확보하면 데이터 구조를 변경하더라도 다른 계층에는 영향을 주지 않게 됨.
+</p>
+<figure>
+    <img src="./images/img3-3.png" width="1000" height="250" alt="그림 3-3 데이터 독립성의 필요성">
+    <figcaption><strong class="green-color">그림 3-3</strong> 데이터 독립성의 필요성</figcaption>
+</figure>
 </body>
 </html>
