--- a/3.1_Understanding_Data_Models.html
+++ b/3.1_Understanding_Data_Models.html
@@ -290,5 +290,15 @@
     <img src="./images/img3-3.png" width="1000" height="250" alt="그림 3-3 데이터 독립성의 필요성">
     <figcaption><strong class="green-color">그림 3-3</strong> 데이터 독립성의 필요성</figcaption>
 </figure>
+<br/>
+<h1>3.1.8 데이터베이스 3단계 구조</h1>
+<p>
+    <a href="ANSI_SPARC.html" target="_blank">ANSI/SPARC</a>
+    3단계 구성의 데이터독립성 모델은 외부 단계와 개념적 단계, 내부적 단게로 구성된, 서로 간섭되지 않는 모델을 제시함.
+</p>
+<figure>
+    <img src="./images/img3-4.png"width="1000" height="250" alt="그림 3-4 데이터베이스 3단계 구조">
+    <figcaption><strong class="green-color">그림 3-4</strong> 데이터베이스 3단계 구조</figcaption>
+</figure>
 </body>
 </html>
