--- a/3.1_Understanding_Data_Models.html
+++ b/3.1_Understanding_Data_Models.html
@@ -15,7 +15,7 @@
 </ul>
 <br/>
 <table>
-    <caption><strong class="green-color">표 3-1</strong> <p class="background">모델링의 특징</p></caption>
+    <caption><strong class="green-color">표 3-1</strong> <mark class="background">모델링의 특징</mark></caption>
     <tr>
         <th>특징</th>
         <th>설명</th>
@@ -49,7 +49,7 @@
 <h1>3.1.2 모델링의 3가지 관점</h1>
 <p>IT 시스템의 대상이 되는 업무(비즈니스)를 분석하여 정보(IT) 시스템으로 국성하는 과정에서 업무의 내용과 IT 시스템의 모습을 적절한 표기법으로 표현하는 것을 모델링이라고 함.</p>
 <table>
-    <caption><strong class="green-color">표 3-2</strong> 모델링의 3가지 관점</caption>
+    <caption><strong class="green-color">표 3-2</strong> <mark class="background"> 모델링의 3가지 관점</mark></caption>
     <tr>
         <th>관점</th>
         <th>설명</th>
@@ -93,7 +93,7 @@
 <h1>3.1.4 데이터 모델이 제공하는 기능 및 데이터 모델의 중요성</h1>
 <p>데이터 모델링 과정을 통해 데이터 모데를 도출하며, 데이터 모델은 다양한 기능을 제공함.</p>
 <table>
-    <caption><strong class="green-color">표 3-3</strong> 데이터 모델의 기능</caption>
+    <caption><strong class="green-color">표 3-3</strong> <mark class="background">데이터 모델의 기능</mark></caption>
     <tr>
         <th>항목</th>
         <th>설명</th>
@@ -125,7 +125,7 @@
 </table>
 <br/>
 <table>
-    <caption><strong class="green-color">표 3-4</strong> 데이터 모델이 중요한 이유</caption>
+    <caption><strong class="green-color">표 3-4</strong> <mark class="background">데이터 모델이 중요한 이유</mark></caption>
     <tr>
         <th>이유</th>
         <th>설명</th>
@@ -179,7 +179,7 @@
     생성된 데이터베이스에 접속하여 SQL문으로 DBMS에 명령을 내릴 수 있음.
 </p>
 <table>
-    <caption><strong class="green-color">표 3-5</strong> 데이터 모델링의 3단계</caption>
+    <caption><strong class="green-color">표 3-5</strong> <mark class="background">데이터 모델링의 3단계</mark></caption>
     <tr>
         <th>단계명</th>
         <th>설명</th>
@@ -234,7 +234,7 @@
     및 분석 단계에 포함되며, 논리적 데이터 모델링 단계는 분석 단계에 포함되고 물리적 데이터 모델링 단계는 설계 단계에 포함됨.
 </p>
 <table>
-    <caption><strong class="green-color">표 3-6</strong> 프로젝트 생명 주기와 데이터 모딜렝 단계</caption>
+    <caption><strong class="green-color">표 3-6</strong> <mark class="background">프로젝트 생명 주기와 데이터 모딜렝 단계</mark></caption>
     <tr>
         <th>프로젝트 생명 주기</th>
         <th>데이터 모델링 단계</th>
