--- a/3.1_Understanding_Data_Models.html
+++ b/3.1_Understanding_Data_Models.html
@@ -300,5 +300,178 @@
     <img src="./images/img3-4.png"width="1000" height="250" alt="그림 3-4 데이터베이스 3단계 구조">
     <figcaption><strong class="green-color">그림 3-4</strong> 데이터베이스 3단계 구조</figcaption>
 </figure>
+<p>내부 스키마가 변경되어도 개념 시크마에 영향을 미치지 않는 것이 물리적 데이터 독립성이고, 개념 스키마가 변경되어도 외부 스키마에 영향을 미치지 않는 것이 논리적 데이터 독립성임.</p>
+<table>
+    <caption><strong class="green-color">표 3-7 </strong><mark class="background">데이터베이스의 3단계 구조</mark></caption>
+    <tr class="background">
+        <th>단계명</th>
+        <th>설명</th>
+        <th>비고</th>
+    </tr>
+    <tr>
+        <th class="left-align">외부 스키마<br/>(External Schema)</th>
+        <th class="left-align">
+            <ul>
+                <li>각각의 사용자가 보는 DB 스키마.</li>
+                <li>개인 사용자 혹은 응용 프로그램 개발자가 접근하는 DB 스키마.</li>
+            </ul>
+        </th>
+        <th>사용자 관점</th>
+    </tr>
+    <tr>
+        <th class="left-align">개념 스키마<br/>(Conceptual Schema)</th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    모든 사용자의 관점을 하나로 통합한 비즈니스 전체의 DB를 기술한 스키마.
+                </li>
+                <li>
+                    응용 프로그램 및 사용자들이 필요한 데이터를 통합한 전체 DB를 기술한 것으로,<br/>
+                    실제 DB에 저장되는 데이터와 응용 프로그램 및 사용자들 간의 관계를 표현하는 스키마.
+                </li>
+            </ul>
+        </th>
+        <th>통합 관점</th>
+    </tr>
+    <tr>
+        <th class="left-align">내부 스키마<br/>(Internal Schema)</th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    DB가 물리적으로 저장되는 형식을 표현한 스키마.
+                </li>
+                <li>
+                    물리적 하드웨어 장치에 데이터가 실제로 저장되는 방법을 표현한 스키마.
+                </li>
+            </ul>
+        </th>
+        <th>물리적 관점</th>
+    </tr>
+</table>
+<p>데이터베이스 3단계 구조의 데이터 독립서에는 물리적 데이터 독립성과 논리적 데이터 독립성이 있음.</p>
+<table>
+    <caption><strong class="green-color">표 3-8 </strong><mark class="background">데이터베이스 3단계 구조에서의 2가지 데이터 독립성</mark></caption>
+    <tr>
+        <th>독립성</th>
+        <th>설명</th>
+        <th>비고</th>
+    </tr>
+    <tr>
+        <th>논리적 데이터 독립성</th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    개념 스키마가 변경되어도 외부 스키마에는 영향을 미치지 않도록 지원하는 것을 뜻함.
+                </li>
+                <li>
+                    논리적 구조가 변경되어도 응용 프로그램에 영향을 미치지 않음.
+                </li>
+            </ul>
+        </th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    사용자 특성에 맞는 변경이 가능함.
+                </li>
+                <li>
+                    통합 구조의 변경이 가능함.
+                </li>
+            </ul>
+        </th>
+    </tr>
+    <tr>
+        <th>물리적 데이터 독립성</th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    내부 스키마가 변경되어도 외부/개념 스키마는 영향을 받지 않도록 지원하는 것을 뜻함.
+                </li>
+                <li>
+                    저장 장치의 구조 변경은 응용 프로그램/개념 스키마에 영향을 미치지 않음.
+                </li>
+            </ul>
+        </th>
+        <th class="left-align">
+            <ul>
+                <li>
+                    물리 구조에 영향 없이 개념 구조의 변경이 가능함.
+                </li>
+                <li>
+                    개념 구조에 영향 없이 물리 구조의 변경이 가능함.
+                </li>
+            </ul>
+        </th>
+    </tr>
+</table>
+<p>
+    각 단계별 데이터 독립성의 보장이 가능한 이유는 각 단계와 단계 사이를 연결하는 사상(매핑)이 있기 때문.
+    사상으로는 외부적/개념적 사상과 개념적/내부적 사상이 있음.
+</p>
+<table>
+    <caption><strong class="green-color">표 3-9 </strong><mark class="background">데이터베이스 3단계 구조에서의 2가지 사상(매핑)</mark></caption>
+    <tr class="background">
+        <th>사상</th>
+        <th>설명</th>
+        <th>비고</th>
+    </tr>
+    <tr>
+        <th class="left-align">외부적/개념적 사상<br/>(논리적 사상)</th>
+        <th class="left-align">외부적 뷰와 개념적 뷰의 상호 호환성을 정의하는 사상.</th>
+        <th class="left-align">사용자가 접근하는 형식에 따라 다른 타입의 필드를 가질 수 있음. 이러한 경우 개념적 뷰의 필드 타입은 변화가 없음.</th>
+    </tr>
+    <tr>
+        <th class="left-align">개념적/내부적 사상<br/>(물리적 사상)</th>
+        <th class="left-align">개념적 뷰와 저장된 데이터베이스의 상호 관련성을 정의하는 사상.</th>
+        <th class="left-align">저장된 데이터베이스 구조가 바뀐다면 개념적/내부적 사상이 바뀌어야 함. 그래야 개념 스키마가 그대로 남아있게 됨.</th>
+
+    </tr>
+</table>
+<p>
+    외부적/개념적 사상은 논리적 데이터 독립성을 보장하기 위한 사상이고, 개념적/내부적 사상은 물리적 데이터 독립성을 보장하기 위한 사상임.
+</p>
+<br/>
+<h1>3.1.9 데이터 모델링의 3가지 요소와 데이터 모델링 용어</h1>
+<p class="botgap"><mark class="background">데이터 모델링의 3가지 요소</mark></p>
+<ul>
+    <li class="botgap">
+        업무가 관여하는 어떤 것(Things)
+    </li>
+    <li class="botgap">
+        어떤 것이 가지는 성격(Attributes)
+    </li>
+    <li class="botgap">
+        업무가 관여하는 어떤 것 간의 관계(Relationships)
+    </li>
+</ul>
+<p>
+    데이터 모델링의 3가지 요소가 결합되어 데이터 모델이 탄생함.
+</p>
+<table>
+    <caption><strong class="green-color">표 3-10 </strong><mark class="background">데이터 모델링 용어</mark></caption>
+    <tr class="background">
+        <th>개념</th>
+        <th>복수/집합 개념 타입/클래스</th>
+        <th>개별/단수 개념 어커런스/인스턴스</th>
+    </tr>
+    <tr>
+        <td class="left-align" rowspan="2">어떤 것(Thing)</td>
+        <td>엔터티 타입(Entity Type)</td>
+        <td>엔터티(Entity)</td>
+    </tr>
+    <tr>
+        <td>엔터티(Entity)</td>
+        <td>인스턴스(Instance)<br/>어커런스(Occurrence)</td>
+    </tr>
+    <tr>
+        <td>어떤 것 간의 연관<br/>(Association between Things)</td>
+        <td>관계(Relationship)</td>
+        <td>페어링(Pairing)</td>
+    </tr>
+    <tr>
+        <td>어떤 것의 성격<br/>(Characteristic of a Thing)</td>
+        <td>속성(Attribute)</td>
+        <td>속성값(Attribute Value)</td>
+    </tr>
+</table>
 </body>
 </html>
